almost finished with html

--- a/index.html
+++ b/index.html
@@ -31,14 +31,15 @@
             </div>
         </header>
         <section class="temperature container">
+
             <h1 class="title">Temperature Converter</h1>
-            <form>
-                    <div class="input-and-btn">
-                        <input type="text" name="one" class= "enternumber" placeholder="Enter your number">
-                        <input type="button" class= "result" value="Result">
-                    </div>
+
+                <form>
+                    <input type="text" name="one" class= "enternumber" placeholder="Enter your number">
+                    <input type="button" class= "result" value="Result">
                 </form>
-                <div class="radio-btn">
+
+                <section class="radio-btn">
 
                     <input type="radio"
                     id= "tempC"
@@ -52,7 +53,8 @@
                     >
                     <label for="tempF">Fahrenheit</label>
 
-                </div>  
+                </section>  
+
                 <section class="output">
                     <p></p>
                 </section>
